@@ -315,7 +315,6 @@ http://article.gmane.org/gmane.comp.video.xine.devel/3456/match=+api+addition+su
 - implement a subclass of the checkbox menu item that takes two strings as parameters and switche between the two depending on the state (eg. Lock/Unlock)
 - implement recursive loading for directories in the playlist only for local directories
 - enhance the look of the controls popup in fullscreen
-- popups should show only on the workspace totem is in
 - fix the skip to spinner's range not getting updated (see update_mrl_label)
 - register all the icons with the stock stuff (see bluecurve for what icons
 we could be getting)
