@@ -1,3 +1,9 @@
+2003-07-29  Bastien Nocera  <hadess@hadess.net>
+
+	* README: removed TODO item
+	* src/totem.c: (popup_hide), (totem_callback_connect): hide the popups
+	when we're changing workspaces so that they don't follow us around
+
 2003-07-28  Bastien Nocera  <hadess@hadess.net>
 
 	* src/Makefile.am:
